# community-guides

./: README.md
Example-Notebooks/: README.md
Library-Writer-Guides/Cpp-To-Pip/: README.md
Library-Writer-Guides/Cpp-To-Pip/phase1/: union-find-merge-tree.cpp
Library-Writer-Guides/Cpp-To-Pip/phase2/: union-find.cpp  union-find.hpp
Library-Writer-Guides/Cpp-To-Pip/phase3/: CMakeLists.txt  union-find.cpp  union-find.hpp
Library-Writer-Guides/Cpp-To-Pip/phase4/: CMakeLists.txt
Library-Writer-Guides/Cpp-To-Pip/phase4/src/demo/: CMakeLists.txt  union-find-exec.cpp
Library-Writer-Guides/Cpp-To-Pip/phase4/src/lib/: CMakeLists.txt  union-find.cpp  union-find.hpp
Library-Writer-Guides/Cpp-To-Pip/phase5/: CMakeLists.txt  glue.cpp  union-find-config.h.in  union-find.cpp  union-find.hpp
